Style Guide revisions, with button interactibility, fixed alignment issues, added logo, added more buttons from other pages

--- a/src/StyleGuide.css
+++ b/src/StyleGuide.css
@@ -45,16 +45,22 @@
   
   /* Layout */
   .container {
-    max-width: 900px;
+    max-width: 1200px;
     margin: auto;
     padding: 1rem;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    flex-direction: row;
+    gap: 10px;
     justify-content: center;
   }
   
   .column {
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 45%;
     background-color: var(--color-white);
     padding: 1.5rem;
@@ -67,9 +73,10 @@
   /* Fonts */
   h1, h2 {
     color: var(--color-text);
+    margin-bottom: 0px;
   }
   
-  p, li {
+  .container p, li {
     color: var(--color-text);
   }
   
@@ -92,13 +99,34 @@
     font-size: 14px;
     font-weight: 400;
   }
+
+  .column img {
+    transition: .3s;
+  }
+  .column img:hover {
+    transform: scale(1.03);
+  }
   
+  .color-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+    background-color: var(--color-white);
+    padding: 1.5rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    min-height: 250px;
+    text-align: center;
+    gap: 10px;
+  }
   /* Color Samples */
   .color-sample {
-    width: 100%;
+    width: 80%;
     padding: 12px;
     text-align: center;
-    margin: 12px 0;
+    justify-content: center;
     border-radius: 4px;
     font-weight: bold;
     border: 1px solid var(--color-text);
@@ -118,7 +146,7 @@
   
   .btn {
     padding: 0.75rem 1.5rem;
-    border-radius: 4px;
+    border-radius: 10px;
     font-size: 16px;
     cursor: pointer;
     border: none;
@@ -127,6 +155,7 @@
   .btn-primary {
     background-color: var(--color-brand);
     color: var(--color-white);
+    transition: .3s;
   }
   
   .btn-secondary {
@@ -134,6 +163,15 @@
     color: var(--color-brand);
     border: 2px solid var(--color-brand);
     font-weight: bold;
+    transition: .3s;
+  }
+
+  .btn-primary:hover, .btn-secondary:hover {
+    transform: scale(1.03);
+  }
+
+  .btn-primary:active, .btn-secondary:active {
+    transform: scale(1);
   }
   
   /* Modal */
@@ -165,11 +203,12 @@
   /* Alerts */
   .alert {
     padding: 1rem;
-    border-radius: 4px;
+    border-radius: 50px;
     margin-top: 10px;
     margin-bottom: 10px;
     text-align: center;
     font-weight: bold;
+    font-size: 20px;
     border: 1px solid black;
   }
   
@@ -183,6 +222,10 @@
     font-size: 14px;
     border: 1px solid var(--color-text);
   }
+
+  .help-icon:hover {
+    cursor:help;
+  }
   
   /* Responsive */
   @media (max-width: 768px) {
@@ -191,3 +234,70 @@
     }
   }
   
+  country {
+    display:flex;
+    flex-direction: row;
+    gap: 5px;
+  }
+
+  .countrybutton {
+    background-color:#000000;
+    border-radius: 8px;
+    border-style:solid;
+    height: 40px;
+    font-size: 15px;
+    width: 80px;
+    transition: .3s;
+    color: white;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .countrybutton:hover{
+    transform: scale(1.05);
+  }
+  
+  .countrybutton:active{
+    transform: scale(1);
+  }
+  
+  .countrybuttons a{
+    font-size: 15px;
+    font-weight: bold;
+  }
+  
+  .countrybuttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    line-height: 1.3;
+    padding-left: 50px;
+  } 
+  
+  .selected_country {
+    background-color:#d46a4c;
+    border-radius: 8px;
+    border-style:solid;
+    height: 40px;
+    font-size: 15px;
+    width: 80px;
+    transition: .3s;
+    color: white;
+    border-color: #d46a4c;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .selected_country:hover{
+    transform: scale(1.05);
+  }
+  
+  .selected_country:active{
+    transform: scale(1);
+  }
